ggplot2 0.8.9 (2010-XX-XX) ----------------------------------------

* stat_smooth: works with locfit (fix #129)
* coord_poler: fix point division bugs
* facet_grid: now labels in facet_grid are correctly aligned when the number of factors is more then one (fixes #87 and #65)
* legends: now can specify the direction of element by opts(legend.direction="vertical") or opts(legend.direction="horizontal"), and hjust of legend boxs is center if legend.direction=="horizontal"
* legends: now can override the alignment of legend box by opts(legend.box="vertical") or opts(legend.box="horizontal")
* legneds: now can override legend title alignment with opts(legend.title.align = 0) or opts(legend.title.align = 1)
* pos_stack: now works with NAs in x
* geom_polygon: specifying linetype now works (thanks to fix from Kohske Takahashi)
* guides: override legend text alignment with opts(legend.text.align = 0) or opts(legend.text.align = 1)
* theme_text handles alignment better when angle = 90
* mean_se: a new summary function to work with stat_summary that calculates mean and one standard error on either side (thanks to contribution from Kohske Takahashi)
* stat_smooth: once again works if n > 1000 and SE = F (thanks to bug report from Theiry Onkelinx and fix from Kohske Takahashi)
* stat_smooth: draw line if only 2 unique x values, not three as previously * guides: fixed #126
* hcl: can now set c and l, and preserves names (thanks to suggestion by Richard Cotton)
* +: meaningful error message if + doesn't know how to deal with an object type
* +: adding NULL to a plot returns the plot (idempotent under addition) (thanks to suggestion by Matthew O'Meara)
* scale_colour_continuous: works correctly with single continuous value (fixes #73)
* scale_alpha: setting limits to a range inside the data now works (thanks to report by Dr Proteome)
* geom_hex: now correctly applies alpha to fill colour not outline colour (thanks to bug report from Ian Fellows)
